--- a/web/index.html
+++ b/web/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="um">La</h1>
-        <h1 class="dois">Ele</h1>
-        <h1 class="tres">Boy</h1>
+        <h1 class="um">Bem vindo a um site aleatorio</h1>
         <nav class="list">
             <ul div="navbar"><a href="http://youtube.com"> nao clique</a></ul>
         
@@ -20,6 +18,24 @@
         <section id="home" class="texto">
             <h2>introdução</h2>
             <p>texto mais texto </p>
+            <figure>
+
+                <img src="fig.img" alt="icon xv" class="icone01"><br>
+                <audio src="audio.mp3" controls></audio><br>
+                <iframe width="200" height="100" src="https://www.youtube.com/embed/PUM3Kl6Unkw" title="#SegueOV Eu a Patroa e as Crianças 4ª Temporada (Episódio 9) Maratona" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
+                <video src="video.mp4" width="200" height="100" type="video/mp4" controls></video><br>
+
+
+            </figure>
+            <div class="formulario">
+                <form action="">
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome" name="nome" class="pergunta" required>
+                    <label for="email" >E-mail:</label>
+                    <input type="email" id="email"class="pergunta" name="email" required>
+                    <button class="botao"><b>Enviar</b></button>
+                </form>
+            </div>
 
         </section>
 
