--- a/GENERICA/index.html
+++ b/GENERICA/index.html
@@ -12,23 +12,67 @@
 
 <body>
 
-    <section class="container">
-        <div class="item">
-            <nav class="navbar">
-
-            </nav>
+    <div class="navtitle">
+        <span id="tituloblack">Tec</span><span>Blog</span>
+    </div>
+    <ul class="navul">
+        <div class="alinhamento">
+            <li class="linav">Home</li>
+            <li class="linav">Jogos</li>
+            <li class="linav">Celulares</li>
+            <li class="linav">Informatica</li>
+            <li class="linav">Eletrônicos</li>
         </div>
-        <div class="item">
-            <main class="conteudo">
+    </ul>
 
-            </main>
-        </div>
-        <div class="item">
-            <footer class="footer">
+    <div class="container-page">
 
-            </footer>
-        </div>
-    </section>
+
+        <main>
+
+
+            <article class="cardconteudo">
+                <div id="introducaocont">
+                    <h2 id="titulopost">Titulo Da postagem</h2>
+                    <p id="subtitulopost">Postado 20 de Março de 2022</p>
+
+                </div>
+                <div id="conteudocentral">
+                    <div class="img"><img width="620px" src="img/back.jpg" alt=""></div>
+                    
+                </div>
+                <div class="texto">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it</p>
+                </div>
+
+            </article>
+            <div class="postagemrecentes">
+                <div class="card01">
+                    <div class="titulopostagem">
+                        <h4>Postagem recentes</h4>
+                    </div>
+                    <div class="conteudopostagem">
+                        <p>lorem tcygvubi tcfygvuh cyvgu</p>
+                    </div>
+                </div>
+                <div class="card02">
+                    <div class="titulopostagem">
+                        <h4>Postagem recentes</h4>
+                    </div>
+                    <div class="conteudopostagem">
+                        <p>Jogos<br>
+                        Celulares<br>
+                        Informatica<br>
+                        eletronicos<br>
+                        Jogos</p>
+                    </div>
+                </div>
+
+            </div>
+            
+
+
+    </div>
 
 
 
