--- a/GENERICA/index.html
+++ b/GENERICA/index.html
@@ -19,7 +19,7 @@
         <div class="alinhamento">
             <li class="linav">Home</li>
             <li class="linav">Jogos</li>
-            <li class="linav">Celulares</li>
+            <li class="linav">Celullares</li>
             <li class="linav">Informatica</li>
             <li class="linav">Eletrônicos</li>
         </div>
